--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
@@ -22,24 +22,26 @@
         <div fxLayout="column"
              fxFlex="100"
              fxLayoutAlign="start center"
-             [ngClass]="schemaErrorHints.length === 0 ? 'schema-validation schema-validation-ok' : 'schema-validation schema-validation-error'" *ngIf="!isLoading && !isError">
+            *ngIf="!isLoading && !isError && schemaErrorHints.length === 0" class="schema-validation schema-validation-ok">
             <div fxFlex="100"
                  fxLayout="row"
                  fxLayoutAlign="start center"
-                 class="schema-validation-text-ok"
-                 *ngIf="schemaErrorHints.length === 0">
+                 class="schema-validation-text-ok">
                 <i class="material-icons">check_circle</i>&nbsp;<b>Schema ok</b>
             </div>
+        </div>
+
+        <div fxLayout="column" fxFlex="100" *ngIf="!isLoading && schemaErrorHints.length > 0">
             <div fxFlex="100"
                  fxLayout="column"
-                 fxLayoutAlign="start center"
-                 *ngIf="schemaErrorHints.length > 0">
-                <div fxFlex="100" fxLayout="row" fxLayoutAlign="center start" class="schema-validation-text-error">
-                <i class="material-icons">warning</i>&nbsp;
-                    <b>{{schemaErrorHints[0].title}}</b>
+                 [ngClass]="schemaErrorHint.level === 'error' ? 'schema-validation schema-validation-error' : 'schema-validation schema-validation-warning'"
+                 fxLayoutAlign="start center" *ngFor="let schemaErrorHint of schemaErrorHints">
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="center start" [ngClass]="schemaErrorHint.level === 'error' ? 'schema-validation-text-error' : 'schema-validation-text-warning'">
+                    <i class="material-icons">warning</i>&nbsp;
+                    <b>{{schemaErrorHint.title}}</b>
                 </div>
-                <div *ngFor="let errorMessage of schemaErrorHints">
-                    <span>{{errorMessage.content}}</span>
+                <div>
+                    <span>{{schemaErrorHint.content}}</span>
                 </div>
             </div>
         </div>
