--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.scss
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.scss
@@ -179,8 +179,9 @@ opacity:0.5;
 .schema-validation {
   margin-bottom: 10px;
   border: 2px solid var(--color-bg-3);
-  padding: 8px;
+  padding: 10px;
   min-height: 50px;
+  text-align: center;
 }
 
 .schema-validation-ok {
@@ -191,10 +192,18 @@ opacity:0.5;
   border: 2px solid #963e3e;
 }
 
+.schema-validation-warning {
+  border: 2px solid #d09836;
+}
+
 .schema-validation-text-ok {
   color: #629f62;
 }
 
 .schema-validation-text-error {
   color: #963e3e;
+}
+
+.schema-validation-text-warning {
+  color: #d09836;
 }
