--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-property-row/event-property-row.component.html
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-property-row/event-property-row.component.html
@@ -17,67 +17,78 @@
   -->
 
 <div fxLayout="row" fxFlex="100" fxLayoutGap="10px">
-    <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <b>
+    <div fxLayout="row" fxLayoutAlign="start center">
+        <div>
+        <b style="white-space: nowrap">
             {{ label }}
         </b>
-        <div class="timestamp-property" *ngIf="timestampProperty" fxLayoutAlign="start center" fxLayout="row">
+        </div>
+        <div fxLayoutAlign="start center" *ngIf="originalRuntimeName" class="ml-5">
+            <span class="runtime-info">{{originalRuntimeName}}</span>
+            <span fxLayoutAlign="center center"
+                  *ngIf="originalRuntimeName !== node.data.runtimeName">
+                <i class="material-icons">arrow_right</i>
+            </span>
+            <span class="runtime-info"
+                  *ngIf="originalRuntimeName !== node.data.runtimeName">{{node.data.runtimeName}}
+            </span>
+        </div>
+        <p style="margin: 0px 10px 10px;" *ngIf="isList">[List]</p>
+    </div>
+
+    <div fxLayout="row" fxLayoutAlign="end center" fxFlex="100" fxLayoutGap="20px">
+        <div class="timestamp-property" *ngIf="timestampProperty" fxLayoutAlign="end center" fxLayout="row">
             <mat-icon *ngIf="timestampProperty" class="timestamp-icon" fxLayout="row" fxLayoutAlign="start center">
                 access_time
             </mat-icon>
             <span style="margin-left: -5px;">marked as timestamp</span>
         </div>
-        <p style="margin: 0px 10px 10px;" *ngIf="isList">[List]</p>
-    </div>
-    <div fxFlex="15" fxLayoutAlign="start center" *ngIf="runtimeType">
-        <span class="runtime-type-info">{{runtimeType}}</span>
-    </div>
-    <div fxFlex="15" fxLayoutAlign="start center">
-        <span *ngIf="showEventPreview">{{eventPreview[0][node.data.runtimeName].value || 'n/a'}}</span>
-    </div>
-    <div fxFlex="15" fxLayoutAlign="start center">
+        <div fxLayoutAlign="end center" *ngIf="runtimeType" class="runtime-type-info-outer">
+            <span class="runtime-info runtime-type-info">{{originalRuntimeType}}</span>
+            <span fxLayoutAlign="center center"><i class="material-icons">arrow_right</i></span>
+            <span class="runtime-info runtime-type-info">{{runtimeType}}</span>
+        </div>
+        <div fxLayoutAlign="end center">
         <span *ngIf="showFieldStatus"
-              [ngClass]="'status status-' +fieldStatusInfo[node.data.runtimeName].fieldStatus.toLowerCase()"
-        [matTooltip]="fieldStatusInfo[node.data.runtimeName].additionalInfo">{{fieldStatusInfo[node.data.runtimeName].fieldStatus}}</span>
-    </div>
+              [ngClass]="'status status-' +fieldStatusInfo[originalRuntimeName].fieldStatus.toLowerCase()"
+              [matTooltip]="fieldStatusInfo[originalRuntimeName].additionalInfo">{{fieldStatusInfo[originalRuntimeName].fieldStatus}}</span>
+        </div>
+        <div *ngIf="isPrimitive" fxLayoutAlign="end center">
+            <mat-form-field class="small-select" color="accent">
+                <mat-select [(ngModel)]="node.data.propertyScope" panelClass="small-select"
+                            [attr.data-cy]="'property-scope-' + label">
+                    <mat-option value="MEASUREMENT_PROPERTY">Measurement</mat-option>
+                    <mat-option value="DIMENSION_PROPERTY">Dimension</mat-option>
+                    <mat-option value="HEADER_PROPERTY">Header</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
 
-    <div fxLayout="row" fxLayoutAlign="end center">
-    <div fxFlex="15" *ngIf="isPrimitive" fxLayoutAlign="end center">
-        <mat-form-field class="small-select" color="accent">
-        <mat-select [(ngModel)]="node.data.propertyScope" panelClass="small-select"
-                    [attr.data-cy]="'property-scope-' + label">
-            <mat-option value="MEASUREMENT_PROPERTY">Measurement</mat-option>
-            <mat-option value="DIMENSION_PROPERTY">Dimension</mat-option>
-            <mat-option value="HEADER_PROPERTY">Header</mat-option>
-        </mat-select>
-        </mat-form-field>
-    </div>
-
-    <div fxLayoutAlign="end center"
-         *ngIf="isNested">
-        <button [disabled]="!isEditable" color="accent" mat-button (click)=addNestedProperty(node.data)>
-            <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
-        </button>
-    </div>
-    <div
-         fxLayoutAlign="end center"
-         class="ml-5 mr-5"
-         *ngIf="isNested || isPrimitive || isList">
-        <button [disabled]="!isEditable" color="accent" mat-button
-                (click)="openEditDialog(node.data)"
-                [attr.data-cy]="'edit-' + label.toLowerCase()">
-            <mat-icon>edit</mat-icon>&nbsp;Edit field
-        </button>
-    </div>
-    <div fxLayoutAlign="end center">
-        <mat-checkbox
-                *ngIf="isNested || isPrimitive || isList"
-                (click)="selectProperty(node.data.id, undefined)"
-                [disabled]="!isEditable"
-                [class.checkbox-selected]="node.data.selected"
-                [checked]="node.data.selected"
-                [attr.data-cy]="'delete-property-' + label.toLowerCase()">
-        </mat-checkbox>
-    </div>
+        <div fxLayoutAlign="end center"
+             *ngIf="isNested">
+            <button [disabled]="!isEditable" color="accent" mat-button (click)=addNestedProperty(node.data)>
+                <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
+            </button>
+        </div>
+        <div
+                fxLayoutAlign="end center"
+                class="ml-5 mr-5"
+                *ngIf="isNested || isPrimitive || isList">
+            <button [disabled]="!isEditable" color="accent" mat-button
+                    (click)="openEditDialog(node.data)"
+                    [attr.data-cy]="'edit-' + label.toLowerCase()">
+                <mat-icon>edit</mat-icon>&nbsp;Edit field
+            </button>
+        </div>
+        <div fxLayoutAlign="end center">
+            <mat-checkbox
+                    *ngIf="isNested || isPrimitive || isList"
+                    (click)="selectProperty(node.data.id, undefined)"
+                    [disabled]="!isEditable"
+                    [class.checkbox-selected]="node.data.selected"
+                    [checked]="node.data.selected"
+                    [attr.data-cy]="'delete-property-' + label.toLowerCase()">
+            </mat-checkbox>
+        </div>
     </div>
 </div>
