--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-property-row/event-property-row.component.scss
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-property-row/event-property-row.component.scss
@@ -18,54 +18,67 @@
 
 
 ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-    background-color: var(--color-accent) !important;
+  background-color: var(--color-accent) !important;
 }
 
 ::ng-deep .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
-    background-color: var(--color-accent) !important;
+  background-color: var(--color-accent) !important;
 }
 
 .checkbox-selected {
-    opacity: 1 !important;
+  opacity: 1 !important;
 }
 
 .timestamp-property {
-    margin-left: 15px;
-    border-radius: 10px;
-    background: var(--color-processor);
-    padding: 0px 10px;
-    font-size: 12px;
-    color: #FFFFFF;
+  margin-left: 15px;
+  border-radius: 10px;
+  background: var(--color-processor);
+  padding: 0px 10px;
+  font-size: 12px;
+  color: #FFFFFF;
 }
 
 .timestamp-icon {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .status-good {
-    background: #75c575;
-    color: white;
+  background: #75c575;
+  color: white;
 }
 
 .status-bad {
-    background: #d2a169;
-    color: white;
+  background: #d2a169;
+  color: white;
 }
 
 .status {
-    width: 60px;
-    text-align: center;
-    padding: 5px;
-    border-radius: 3px;
+  width: 70px;
+  min-width: 70px;
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.runtime-info {
+  border-radius: 5px;
+  color: var(--color-default-text);
+  font-size: 10pt;
+  text-align: center;
 }
 
 .runtime-type-info {
-    padding: 5px;
-    border-radius: 3px;
-    background: var(--color-bg-3);
-    color: var(--color-default-text);
-    width: 70px;
-    text-align: center;
+  border-radius: 5px;
+  color: var(--color-default-text);
+  width: 60px;
+  font-size: 10pt;
+  text-align: center;
+}
+
+.runtime-type-info-outer {
+  padding: 3px;
+  border-radius: 5px;
+  background: var(--color-bg-3);
 }
 
 
