[STREAMPIPES-577] Improve error handling of adapters

--- a/ui/src/app/core-ui/static-properties/static-property.component.html
+++ b/ui/src/app/core-ui/static-properties/static-property.component.html
@@ -68,6 +68,7 @@
                                                      [staticProperties]="staticProperties"
                                                      [eventSchemas]="eventSchemas"
                                                      [pipelineElement]="pipelineElement"
+                                                     [parentForm]="parentForm"
                                                      [completedStaticProperty]="completedStaticProperty"
                                                      [adapterId]="adapterId">
             </app-static-runtime-resolvable-any-input>
@@ -77,6 +78,7 @@
                                                        [pipelineElement]="pipelineElement"
                                                        [eventSchemas]="eventSchemas"
                                                        [staticProperty]="staticProperty"
+                                                       [parentForm]="parentForm"
                                                        [staticProperties]="staticProperties"
                                                        [adapterId]="adapterId"></app-static-runtime-resolvable-oneof-input>
 
