[STREAMPIPES-565] Support broker settings override when importing resources

--- a/ui/src/app/configuration/export/export-dialog/data-export-dialog.component.html
+++ b/ui/src/app/configuration/export/export-dialog/data-export-dialog.component.html
@@ -18,7 +18,7 @@
 
 <div class="sp-dialog-container">
     <div class="sp-dialog-content">
-        <div fxFlex="100" fxLayout="column" class="p-15" *ngIf="preview">
+        <div fxFlex="100" fxLayout="column" class="p-15" *ngIf="preview && !exportInProgress">
             <div *ngFor="let config of preview.assetExportConfiguration">
                 <h4>Exported items {{config.assetName}}</h4>
                 <sp-data-export-item [exportItems]="config.adapters" sectionTitle="Adapters"></sp-data-export-item>
@@ -30,6 +30,12 @@
                 <sp-data-export-item [exportItems]="config.pipelines" sectionTitle="Pipelines"></sp-data-export-item>
             </div>
         </div>
+        <div fxFlex="100" fxLayout="column" *ngIf="exportInProgress" class="mt-10" fxLayoutAlign="center center">
+            <mat-spinner [diameter]="50" color="accent"></mat-spinner>
+            <h4 class="mt-10">Exporting resources...</h4>
+            <h5 class="mt-10">Depending on number and size of exported files, this might take a while...</h5>
+        </div>
+
     </div>
     <mat-divider></mat-divider>
     <div class="sp-dialog-actions">
