--- a/ui/src/app/core/components/toolbar/toolbar.component.html
+++ b/ui/src/app/core/components/toolbar/toolbar.component.html
@@ -34,7 +34,7 @@
                 <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size"
                         (click)="go('notifications')"
                         fxLayout fxLayoutAlign="center center"
-                        matTooltip="Notifications" matTooltipPosition="bottom">
+                        matTooltip="Notifications" matTooltipPosition="below">
                     <mat-icon [matBadge]="unreadNotificationCount"
                               matBadgeColor="accent"
                               matBadgePosition="below after"
