[hotfix] Avoid refresh on field selection in schema editor

--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
@@ -97,7 +97,7 @@
                                     [(originalEventSchema)]="oldEventSchema"
                                     [eventPreview]="eventPreview"
                                     [fieldStatusInfo]="fieldStatusInfo"
-                                    (refreshTreeEmitter)="refreshTree()"
+                                    (refreshTreeEmitter)="refreshTree($event)"
                                     [(countSelected)]="countSelected"></event-property-row>
                         </ng-template>
                     </tree-root>
