--- a/ui/src/app/dashboard/components/panel/dashboard-panel.component.html
+++ b/ui/src/app/dashboard/components/panel/dashboard-panel.component.html
@@ -56,9 +56,10 @@
     <div fxFlex="100" fxLayout="column">
         <dashboard-grid [editMode]="editMode" [dashboard]="dashboard"
                         [headerVisible]="headerVisible"
+                        [allMeasurements]="allMeasurements"
                         (updateCallback)="updateAndQueueItemForDeletion($event)"
                         (deleteCallback)="removeAndQueueItemForDeletion($event)"
-                        *ngIf="dashboard"
+                        *ngIf="dashboard && allMeasurements"
                         class="h-100 dashboard-grid"></dashboard-grid>
     </div>
 </sp-basic-view>
