[hotfix] Add button to delete an adapter description

--- a/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
+++ b/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
@@ -50,6 +50,7 @@
                     <sp-adapter-description attr.id="{{adapterDescription.name.replaceAll(' ', '_')}}"
                                             class="adapter-description"
                                             fxFlex="33"
+                                            (updateAdapterEmitter)="getAdapterDescriptions()"
                                             (click)="selectAdapter(adapterDescription.appId)"
                                             *ngFor="let adapterDescription of adapterDescriptions | adapterFilter:currentFilter"
                                             [adapter]="adapterDescription"></sp-adapter-description>
