[STREAMPIPES-565] Let export feature ignore deleted resources

--- a/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.html
+++ b/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.html
@@ -79,7 +79,7 @@
             </div>
             <div *ngIf="selectedLinkType.linkQueryHint === 'adapter'" fxLayout="column" class="link-configuration">
                 <mat-form-field color="accent" fxFlex="100">
-                    <mat-label>Data Views</mat-label>
+                    <mat-label>Adapter</mat-label>
                     <mat-select (selectionChange)="changeLabel($event.value.elementId, $event.value.name, $event.value)"
                                 [(value)]="currentResource"
                                 fxFlex
