--- a/ui/src/app/data-explorer/components/widgets/correlation-chart/correlation-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/correlation-chart/correlation-chart-widget.component.html
@@ -19,12 +19,17 @@
 <div fxLayout="column" fxFlex="100"
      [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
 
-    <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="timeSettings"></sp-no-data-in-date-range>
+    <sp-no-data-in-date-range
+        *ngIf="showNoDataInDateRange"
+        [viewDateRange]="timeSettings"
+        class="h-100">
+    </sp-no-data-in-date-range>
 
     <sp-too-much-data
             [amountOfEvents]="amountOfTooMuchEvents"
             (loadDataWithTooManyEventsEmitter)="loadDataWithTooManyEvents()"
-            *ngIf="showTooMuchData"></sp-too-much-data>
+            *ngIf="showTooMuchData" class="h-100">
+    </sp-too-much-data>
 
 
     <plotly-plot *ngIf="showData"
