[hotfix] Fix flickering in data explorer slide view

--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -84,7 +84,7 @@
         </button>
       </div>
     </div>
-    <div class="widget-content p-0 gridster-item-content ml-0 mr-0 h-100">
+    <div class="widget-content p-0 gridster-item-content ml-0 mr-0 h-100 mw-100">
       <ng-template widgetHost class="h-100 p-0"></ng-template>
       <div fxFlex="100"
            fxLayout="column"
