--- a/ui/src/app/data-explorer/components/widget-view/slide-view/data-explorer-dashboard-slide-view.component.html
+++ b/ui/src/app/data-explorer/components/widget-view/slide-view/data-explorer-dashboard-slide-view.component.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div fxFlex="100">
-      <div class="h-100 w-100" id="slideViewOuter" fxFlex="100">
+      <div class="h-100 w-100 mw-100" id="slideViewOuter" fxFlex="100">
                 <sp-data-explorer-dashboard-widget
                         [ngStyle]="{height: gridsterItemComponent.height -15 + 'px'}"
                         [timeSettings]="timeSettings"
