--- a/ui/src/app/core-ui/data-download-dialog/components/download/download.component.html
+++ b/ui/src/app/core-ui/data-download-dialog/components/download/download.component.html
@@ -16,12 +16,12 @@
   ~
   -->
 <ng-template matStepLabel>Download</ng-template>
-<div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="!downloadFinish" class="mt-35">
+<div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="!downloadProgress.finished" class="mt-35">
   <mat-spinner [diameter]="30" color="accent"></mat-spinner>
-  <label *ngIf="downloadedMBs !== undefined">{{downloadedMBs | number : '1.0-2' }} Mb</label>
+  <label *ngIf="downloadProgress.downloadedMBs !== undefined">{{downloadProgress.downloadedMBs | number : '1.0-2' }} Mb</label>
   <button mat-button warn color="warn" (click)="cancelDownload()">Cancel</button>
 </div>
-<div fxLayout="column" fxLayoutAlign="space-around center" *ngIf="downloadFinish">
+<div fxLayout="column" fxLayoutAlign="space-around center" *ngIf="downloadProgress.finished">
   <mat-icon class="icon-check">check</mat-icon>
   <h5>Download successful</h5>
 </div>
