[STREAMPIPES-587] fix button tooltip for asset upload

--- a/ui/src/app/assets/components/asset-overview/asset-overview.component.html
+++ b/ui/src/app/assets/components/asset-overview/asset-overview.component.html
@@ -32,7 +32,7 @@
                     refresh
                 </i>
             </button>
-            <button mat-button mat-icon-button matTooltip="Refresh assets" matTooltipPosition="below" color="accent"
+            <button mat-button mat-icon-button matTooltip="Upload assets" matTooltipPosition="below" color="accent"
                     (click)="uploadAsset()">
                 <i class="material-icons">
                     cloud_upload
