fix labels and tool tip in asset view

--- a/ui/src/app/assets/components/asset-overview/asset-overview.component.html
+++ b/ui/src/app/assets/components/asset-overview/asset-overview.component.html
@@ -74,7 +74,7 @@
                                 </button>
                             </span>
                             <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">
-                                <button color="accent" mat-button mat-icon-button matTooltip="Show info"
+                                <button color="accent" mat-button mat-icon-button matTooltip="Edit asset"
                                         matTooltipPosition="above" (click)="goToDetailsView(asset, true)"><i
                                         class="material-icons">edit</i>
                                 </button>
