[STREAMPIPES-583] Add first cypress e2e test for the data download

--- a/ui/src/app/core-ui/data-download-dialog/components/select-data/select-data-missing-values/select-data-missing-values.component.html
+++ b/ui/src/app/core-ui/data-download-dialog/components/select-data/select-data-missing-values/select-data-missing-values.component.html
@@ -22,17 +22,20 @@
     [(ngModel)]="dataExportConfig.missingValueBehaviour">
   <mat-radio-button
       value="ignore"
-      class="sp-radio-button">
+      class="sp-radio-button"
+      data-cy="download-configuration-ignore">
     Ignore lines with missing value
   </mat-radio-button>
   <mat-radio-button
       value="default"
-      class="sp-radio-button">
+      class="sp-radio-button"
+      data-cy="download-configuration-default">
     Add default value
   </mat-radio-button>
   <mat-radio-button
       value="empty"
-      class="sp-radio-button">
+      class="sp-radio-button"
+      data-cy="download-configuration-empty">
     Leave entry empty
   </mat-radio-button>
 </mat-radio-group>
