--- a/ui/src/app/core-ui/data-download-dialog/components/select-format/select-format.component.html
+++ b/ui/src/app/core-ui/data-download-dialog/components/select-format/select-format.component.html
@@ -20,10 +20,16 @@
 <div>
   <h5>Download Format</h5>
   <mat-radio-group class="sp-radio-group" [(ngModel)]="formatExportConfig.exportFormat">
-    <mat-radio-button value="json" class="sp-radio-button">
+    <mat-radio-button
+        value="json"
+        class="sp-radio-button"
+        data-cy="download-configuration-json">
       JSON
     </mat-radio-button>
-    <mat-radio-button value="csv" class="sp-radio-button">
+    <mat-radio-button
+        value="csv"
+        class="sp-radio-button"
+        data-cy="download-configuration-csv">
       CSV
     </mat-radio-button>
   </mat-radio-group>
@@ -31,7 +37,13 @@
 <div *ngIf="formatExportConfig.exportFormat === 'csv'" class="mt-10">
   <h5>Delimiter</h5>
   <mat-radio-group [(ngModel)]="formatExportConfig.delimiter" class="sp-radio-group">
-    <mat-radio-button value="comma" class="sp-radio-button">&nbsp;,</mat-radio-button>
-    <mat-radio-button value="semicolon" class="sp-radio-button">&nbsp;;</mat-radio-button>
+    <mat-radio-button
+        value="comma"
+        class="sp-radio-button"
+        data-cy="download-configuration-delimiter-comma">&nbsp;,</mat-radio-button>
+    <mat-radio-button
+        value="semicolon"
+        class="sp-radio-button"
+        data-cy="download-configuration-delimiter-semicolon">&nbsp;;</mat-radio-button>
   </mat-radio-group>
 </div>
