--- a/ui/src/app/connect/components/adapter-configuration/adapter-configuration.component.html
+++ b/ui/src/app/connect/components/adapter-configuration/adapter-configuration.component.html
@@ -25,7 +25,8 @@
     </div>
     <div fxLayout="column" fxLayoutAlign="center stretch" *ngIf="adapter">
 
-        <sp-adapter-configuration-header [adapterTypeName]="adapterTypeName" [isDataStreamDescription]="isDataStreamDescription"></sp-adapter-configuration-header>
+        <sp-adapter-configuration-header [adapterTypeName]="adapterTypeName"
+                                         [isDataStreamDescription]="isDataStreamDescription"></sp-adapter-configuration-header>
 
         <mat-horizontal-stepper [linear]="true" #stepper color="accent" class="stepper">
             <mat-step *ngIf="!isGenericAdapter">
