[STREAMPIPES-597] Refactor adapter configuration component

--- a/ui/src/app/connect/components/new-adapter/new-adapter.component.html
+++ b/ui/src/app/connect/components/new-adapter/new-adapter.component.html
@@ -1,3 +1,3 @@
-<sp-adapter-configuration *ngIf="show"
+<sp-adapter-configuration *ngIf="initialized"
                           [adapterTypeName]="adapterTypeName"
                           [adapter]="adapter"></sp-adapter-configuration>
